src/objects/FourPlanning_Hito_global__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cerrar</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato Activo con Telefónica</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato Activo con la Competencia</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP TI</fullName>
                </value>
                <value>
                    <fullName>Evento para clientes de Telefonica</fullName>
                </value>
                <value>
                    <fullName>Evento Interno Telefonica</fullName>
                </value>
                <value>
                    <fullName>Evento Relevante de la industria</fullName>
                </value>
                <value>
                    <fullName>Previsión Cierre TOP 3 deals</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geographical Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>FourPlanning Hitos globales</relationshipLabel>
        <relationshipName>FourPlanning_Hitos_globales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones y tecnologia</fullName>
                </value>
                <value>
                    <fullName>Financiero</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Sector Público</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Servicios Públicos</fullName>
                </value>
                <value>
                    <fullName>Transporte</fullName>
                </value>
                <value>
                    <fullName>Todos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_sector__c</fullName>
        <label>Sub sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Automotores y Camiones</fullName>
                </value>
                <value>
                    <fullName>Droguerías</fullName>
                </value>
                <value>
                    <fullName>Tienda Departamental</fullName>
                </value>
                <value>
                    <fullName>Otros Comercios</fullName>
                </value>
                <value>
                    <fullName>Supermercados</fullName>
                </value>
                <value>
                    <fullName>Alimentos y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Combustibles y Lubricantes</fullName>
                </value>
                <value>
                    <fullName>Call Centers</fullName>
                </value>
                <value>
                    <fullName>Grupo Telefonica</fullName>
                </value>
                <value>
                    <fullName>Hardware Tecnológico</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Contenido Multimedia</fullName>
                </value>
                <value>
                    <fullName>Telcos e Internet</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Instituciones financieras no bancarias</fullName>
                </value>
                <value>
                    <fullName>Medios de Pago</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Agro, Pesca y Forestación</fullName>
                </value>
                <value>
                    <fullName>Construccion</fullName>
                </value>
                <value>
                    <fullName>Industria Alimentos</fullName>
                </value>
                <value>
                    <fullName>Industria Automotriz y Autopartes</fullName>
                </value>
                <value>
                    <fullName>Industria Ligera y Manufacturas</fullName>
                </value>
                <value>
                    <fullName>Industria Metalurgica y Pesada</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industria Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Mineria</fullName>
                </value>
                <value>
                    <fullName>Petroleo y Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FourPlanning Hito global</label>
    <nameField>
        <label>Nombre de FourPlanning Hito global</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning Hitos globales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>